fix: hide recommendations fly out overflow

--- a/src/app/generator/generator.component.scss
+++ b/src/app/generator/generator.component.scss
@@ -3,6 +3,9 @@
     flex-direction: column;
     margin-top: 1rem;
     margin-bottom: 10rem;
+
+    // Overflow for primeflex fadeoutright animation
+    overflow-x: hidden;
 }
 
 ::ng-deep .vw-panel {
